--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,9 @@ body {
     background-color: #ffffff;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+
+    background-image: url(/public/transport.jpg);
+    background-repeat: no-repeat;
 }
 
 h1,
@@ -30,171 +33,16 @@ li {
     list-style: none;
 }
 
-button {
-    cursor: pointer;
-    transition: scale 250ms cubic-bezier();
-}
-button:hover,
-button:focus {
-    scale: 1.2;
 
-}
-a {
-    cursor: pointer;
-    text-decoration: none;
-    color: black;
-    font-size: 28px;
-    background-color: #f4f8fb;
-    /* box-shadow: 0px 3.43693px 3.43693px rgba(0, 0, 0, 0.25); */
-    padding: 5px;
-    border-radius: 4px;
-    transition: scale 250ms cubic-bezier();
 
-}
-a:hover, a:focus, a:active {
-    scale: 1.2;
-    box-shadow: 0px 3.43693px 3.43693px rgba(0, 0, 0, 0.25);
-  
-}
 
 img {
     display: block;
     max-width: 100%;
     height: auto;
 }
-nav {
-   
-    display: flex;
-    padding: 15px 30px;
-    justify-content: flex-start;
-    align-items: flex-start;
-    gap: 40px;
-   
-
-}
 
 
 
-table {
-  border-collapse: collapse;
-    font-size: 14px;
-line-height: 2;
-}
-
-th {
-  padding: 5px;
-  text-align: left;
-  border-bottom: 1px solid #ccc;
-  background-color: #f4f8fb;
-
-  font-weight: normal;
-}
-
-td {
-    
-  padding: 5px;
-    font-size: 14px;
-  border-bottom: 1px solid #ccc;
-}
-td:nth-child(3) {
-    width: 370px;
-}
-td:nth-child(6) {
-    width: 350px;
-}
-.edit{
-padding: 0;
-margin: 0;
-display: inline-block;
-height: 30px;
-width: 40px;
-border: none;
-box-shadow: none;
-}
-.delete {
-   
-  height: 30px;
-  width: 40px;
-  border-radius: 4px;
-  border: none;
- 
-  
- 
-}
-
-.edit{
-  background: url(/public/profile.svg) center ;
-  background-color: #00d3f3;
-  background-repeat: no-repeat;
- 
-  margin-right: 5px;
-}
-
-.delete {
-  background: url(/public/cross.svg) center;
-    background-color: #ff436f;
-      background-repeat: no-repeat;
-}
 
 
-.load {
-    width: 100px;
-    padding: 5px;
-
-    font-style: normal;
-    font-weight: 600;
-    font-size: 14px;
-
-    color: black;
-    background: #f4f8fb;
-    box-shadow: 0px 3.43693px 3.43693px rgba(0, 0, 0, 0.25);
-    border-radius: 4px;
-    border: none;
-    margin-bottom: 100px;
-}
-
-
-.center {
-    text-align: center;
-    display: flex;
-    justify-content: center;
-    gap: 40px;
-    margin-top: 20px;
-}
-
-.spinner::before {
-    --lighthouse-symbol: "\26EF";
-    --dotted-circle: "\25CC";
-    --hourglass: "\23F3";
-
-    content: var(--dotted-circle);
-}
-
-.spinner {
-    font-style: normal;
-
-    font-size: 4em;
-
-    animation: rotation 5s infinite linear;
-}
-
-@keyframes rotation {
-    from {
-        transform: rotate(0deg);
-    }
-
-    to {
-        transform: rotate(359deg);
-    }
-}
-
-
-
-.wrapper {
-    height: 50px;
-    width: 50px;
-    margin: auto;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
