--- a/src/pages/ShipmentPage/ShipmentPage.module.css
+++ b/src/pages/ShipmentPage/ShipmentPage.module.css
@@ -1,18 +1,95 @@
-.page__container{
-    margin-bottom: 30px;
+.block {
+    position: relative;
+    width: 1250px;
+    margin-top: 20px;
+    height: 780px;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: rgb(233, 240, 240);
+
 }
 
-.shipment__form{
+.block::before {
+    content: '';
+    display: block;
+    width: 100%;
+
+    height: 100px;
+    background-color: #00d3f8;
+
+}
+
+.page__container {
+    position: absolute;
+    padding: 60px 0 50px 0;
+    width: 1200px;
+    top: 30px;
+    left: 20px;
+    background-color: #fff;
+    border-radius: 6px;
+   
+}
+
+.page__container::after,
+.page__container::before {
+    content: '';
+    display: block;
+    width: 100%;
+
+    height: 1px;
+    background-color: rgb(193, 192, 192);
+}
+
+.shipment__title {
+    margin: 40px 30px 0 30px;
+    text-transform: uppercase;
+    font-size: 20px;
+    font-weight: 400;
+
+}
+
+.shipment__form {
     display: flex;
     flex-wrap: wrap;
-    width: 100%;
-    gap: 30px;
+
+    padding: 40px 60px 0px 40px;
+    gap: 25px;
 }
 
-.shipment__container{
+.shipment__container {
     display: flex;
     flex-direction: column;
-    width: calc((100% - 30px)/2);
+    width: calc((100% - 25px)/2);
     gap: 10px;
     margin-bottom: 20px;
+}
+
+.shipment__input {
+    padding: 6px 12px;
+    height: 40px;
+    border-radius: 6px;
+    border: 1px solid grey;
+
+}
+
+.shipment__submit {
+    width: 100px;
+    padding: 5px;
+    margin-bottom: 100px;
+    margin-left: auto;
+    margin-right: auto;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 14px;
+
+    color: black;
+    background: #fff;
+    box-shadow: 0px 3.43693px 3.43693px rgba(0, 0, 0, 0.25);
+    border-radius: 4px;
+    border: none;
+
+}
+
+.shipment__submit:disabled {
+    background-color: rgb(172, 170, 170);
 }
