--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@ body {
         margin: 0 auto;
         width: 1440px;
         padding: 15px;
-        font-family: "Montserrat", sans-serif;
+        font-family: 'Maven Pro', sans-serif;
 
         font-synthesis: none;
         text-rendering: optimizeLegibility;
