--- a/src/components/TableHeader/TableHeader.module.css
+++ b/src/components/TableHeader/TableHeader.module.css
@@ -1,5 +1,5 @@
 th {
-    padding: 10px;
+    padding: 10px 0px 10px 15px;
     text-align: left;
     border-bottom: 1px solid #ccc;
     background-color: #f4f8fb;
