--- a/src/components/TableHeader/TableHeader.module.css
+++ b/src/components/TableHeader/TableHeader.module.css
@@ -1,8 +1,28 @@
 th {
+
     padding: 10px 0px 10px 15px;
     text-align: left;
     border-bottom: 1px solid #ccc;
     background-color: #f4f8fb;
     font-size: 10px;
     font-weight: normal;
+}
+.customer {
+    margin-right: 250px;
+}
+.trackingNo {
+    margin-right: 100px;
+}
+.status{
+    margin-right: 25px;
+}
+.consignee{
+    margin-right: 230px;
+}
+.svg {
+    display: inline-block;
+    margin-left: auto;
+    border: none;
+    background-color: transparent;
+    padding: 0;
 }
