--- a/src/components/LoadMoreBtn/LoadMoreBtn.module.css
+++ b/src/components/LoadMoreBtn/LoadMoreBtn.module.css
@@ -7,7 +7,7 @@
     font-size: 14px;
 
     color: black;
-    background: #f4f8fb;
+    background: rgba(255,255,255, 0.5);
     box-shadow: 0px 3.43693px 3.43693px rgba(0, 0, 0, 0.25);
     border-radius: 4px;
     border: none;
@@ -25,11 +25,12 @@
 
 button {
     cursor: pointer;
-    transition: scale 250ms cubic-bezier();
+    transition: scale 250ms cubic-bezier(), background-color 250ms cubic-bezier();
 }
 
 button:hover,
 button:focus {
+    background-color: rgb(186, 206, 245);
     scale: 1.3;
     
 
