--- a/src/index.css
+++ b/src/index.css
@@ -39,6 +39,11 @@ img {
     height: auto;
 }
 
-
+.notFound {
+    margin-top: 40px;
+    text-align: center;
+    font-size: 30px;
+    color: white;
+}
 
 
