--- a/src/pages/ShipmentPage/ShipmentPage.module.css
+++ b/src/pages/ShipmentPage/ShipmentPage.module.css
@@ -85,16 +85,22 @@
 
     color: black;
     background: #fff;
+    text-align: center;
     box-shadow: 0px 3.43693px 3.43693px rgba(0, 0, 0, 0.25);
     border-radius: 4px;
-    border: none;
+    border: 1px solid gray;
+    transition: scale 250ms cubic-bezier();
 
 }
 
 .shipment__submit:disabled {
-    background-color: rgb(172, 170, 170);
+    background-color: rgb(225, 223, 223);
+    color: rgb(141, 140, 140);
+    cursor:auto;
+    scale: 1;
 }
 
-.shipment__back{
- text-align: center;
+.shipment__back:hover,.shipment__back:focus {
+    scale: 1.2;
+ 
 }
