--- a/src/components/LoadMoreBtn/LoadMoreBtn.module.css
+++ b/src/components/LoadMoreBtn/LoadMoreBtn.module.css
@@ -12,6 +12,8 @@
     border-radius: 4px;
     border: none;
     margin-bottom: 100px;
+    cursor: pointer;
+        transition: scale 250ms cubic-bezier(), background-color 250ms cubic-bezier();
 }
 
 
@@ -23,13 +25,9 @@
     margin-top: 20px;
 }
 
-button {
-    cursor: pointer;
-    transition: scale 250ms cubic-bezier(), background-color 250ms cubic-bezier();
-}
 
-button:hover,
-button:focus {
+.load:hover,
+.load:focus {
     background-color: rgb(186, 206, 245);
     scale: 1.3;
     
