--- a/src/components/TableRow/TableRow.module.css
+++ b/src/components/TableRow/TableRow.module.css
@@ -29,7 +29,7 @@ td:nth-child(6) {
     width: 40px;
     margin-right: 5px;
     border: none;
-    box-shadow: none;
+box-shadow: 0px 3.43693px 3.43693px rgba(0, 0, 0, 0.25);
     background: url(/public/profile.svg) center;
     background-color: #00d3f3;
     background-repeat: no-repeat;
@@ -44,16 +44,13 @@ td:nth-child(6) {
     width: 40px;
     border-radius: 4px;
     border: none;
+    box-shadow: 0px 3.43693px 3.43693px rgba(0, 0, 0, 0.25);
     background: url(/public/cross.svg) center;
     background-color: #ff436f;
     background-repeat: no-repeat;
 cursor: pointer;
     transition: scale 250ms cubic-bezier();
 
-}
-button {
-    cursor: pointer;
-    transition: scale 250ms cubic-bezier();
 }
 
  .delete:hover,
