--- a/src/components/LoadMoreBtn/LoadMoreBtn.module.css
+++ b/src/components/LoadMoreBtn/LoadMoreBtn.module.css
@@ -13,7 +13,7 @@
     border: none;
     margin-bottom: 100px;
     cursor: pointer;
-        transition: scale 250ms cubic-bezier(), background-color 250ms cubic-bezier();
+        transition: scale var(--transition-time) cubic-bezier(), background-color var(--transition-time) cubic-bezier();
 }
 
 
@@ -29,7 +29,7 @@
 .load:hover,
 .load:focus {
     background-color: rgb(186, 206, 245);
-    scale: 1.3;
+    scale: var(--hover-focus-scale);
     
 
 }
