--- a/src/components/TableRow/TableRow.module.css
+++ b/src/components/TableRow/TableRow.module.css
@@ -1,5 +1,5 @@
 .body {
-    background-color: whitesmoke;
+    background-color: var(--main-background-color);
    
 }
 td {
@@ -34,7 +34,7 @@ box-shadow: 0px 3.43693px 3.43693px rgba(0, 0, 0, 0.25);
     background-color: #00d3f3;
     background-repeat: no-repeat;
     cursor: pointer;
-    transition: scale 250ms cubic-bezier();
+    transition: scale var(--transition-time) cubic-bezier();
     
 }
 
@@ -49,7 +49,7 @@ box-shadow: 0px 3.43693px 3.43693px rgba(0, 0, 0, 0.25);
     background-color: #ff436f;
     background-repeat: no-repeat;
 cursor: pointer;
-    transition: scale 250ms cubic-bezier();
+    transition: scale var(--transition-time) cubic-bezier();
 
 }
 
@@ -62,5 +62,5 @@ cursor: pointer;
 .container__btn .edit:hover,
 .container__btn .edit:focus{
 background-color: #00d3f3;
-scale: 1.2;
+scale: var(--hover-focus-scale);
 }
