--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,9 @@
-
+:root{
+    --main-background-color: #ffffff;
+    --hover-focus-scale: 1.3;
+    --transition-time: 250ms;
+    --transition: cubic-bezier();
+}
 body {
         margin: 0 auto;
         width: 1440px;
@@ -10,7 +15,7 @@ body {
         -webkit-font-smoothing: antialiased;
         -moz-osx-font-smoothing: grayscale;
         -webkit-text-size-adjust: 100%;
-    background-color: #ffffff;
+    background-color: var(--main-background-color);
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 
@@ -43,7 +48,7 @@ img {
     margin-top: 40px;
     text-align: center;
     font-size: 30px;
-    color: white;
+    color: var(--main-background-color);
 }
 
 
