--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -2,7 +2,7 @@
     margin-bottom: 40px;
     margin-left: 40px;
     margin-top: 40px;
-    color: white;
+    color: var(--main-background-color);
     font-size: 30px;
     
 }
@@ -16,7 +16,7 @@
     overflow: hidden;
 }
 .main__text{
-        color: rgb(51, 71, 111);
+    color: rgb(51, 71, 111);
     font-size: 18px;
     line-height: 1.5;
 }
