--- a/src/pages/ShipmentPage/ShipmentPage.module.css
+++ b/src/pages/ShipmentPage/ShipmentPage.module.css
@@ -25,7 +25,7 @@
     width: 1200px;
     top: 30px;
     left: 20px;
-    background-color: #fff;
+    background-color: var(--main-background-color);
     border-radius: 6px;
    
 }
@@ -89,7 +89,7 @@
     box-shadow: 0px 3.43693px 3.43693px rgba(0, 0, 0, 0.25);
     border-radius: 4px;
     border: 1px solid gray;
-    transition: scale 250ms cubic-bezier();
+    transition: scale var(--transition-time) cubic-bezier();
 
 }
 
